@@ -123,7 +123,7 @@ if not has_setuptools:
 
 # Check if Cython is installed or not (requisite)
 try:
-    from Cython import __version__ as CythonVersion
+    from Cython import __version__ as cython_version
     from Cython.Distutils import build_ext
     cmdclass['build_ext'] = build_ext
 except ImportError:
@@ -131,13 +131,13 @@ except ImportError:
         "You need %(pkgname)s %(pkgver)s or greater to compile PyTables!"
         % {'pkgname': 'Cython', 'pkgver': min_cython_version})
 
-if CythonVersion < min_cython_version:
+if LooseVersion(cython_version) < min_cython_version:
     exit_with_error(
-        "At least Cython %s is needed so as to generate extensions!"
-        % (min_cython_version))
+        "You need %(pkgname)s %(pkgver)s or greater to run PyTables!"
+        % {'pkgname': 'Cython', 'pkgver': min_cython_version})
 else:
     print("* Found %(pkgname)s %(pkgver)s package installed."
-          % {'pkgname': 'Cython', 'pkgver': CythonVersion})
+          % {'pkgname': 'Cython', 'pkgver': cython_version})
 
 VERSION = open('VERSION').read().strip()
 
